# Discrete-Differential-Geometry

./: .gitignore  CLAUDE.md  README.md  TODO.md  bench_sampler.d  dub.json  dub.sdl  meson.build  prof_demangle.out  profile.tree  pyproject.toml  test_valid_moves.d
data/: S3_V500_test_sample_5.dual_graph  S3_V500_test_sample_5.mfd  S3_V500_test_sample_6.dual_graph  S3_V500_test_sample_6.mfd  S3_V500_test_sample_7.dual_graph  S3_V500_test_sample_7.mfd  S3_V500_test_sample_8.dual_graph  S3_V500_test_sample_8.mfd  S3_V500_test_sample_9.dual_graph  S3_V500_test_sample_9.mfd
jupyter_notebooks/: edge_graph_analysis.ipynb  equilibrium_checks.ipynb
legacy/: README.md  convergence_analysis.py  convergence_test.params  decorr.py  equilibrate_batch.py  equilibrate_seed.py  final_fig.py  generate_seed_params.py  knotgas_sk.py  local_lapse_proto.py  migrate_hdv_naming.py  migrate_history.py  ramp_vdv.py  reconcile.py  run_convergence_test.sh  validate_centroids.py  validate_seeds.py
notes/: 2026-03-15_entropic_force_measurement.md  2026-03-15_hinge_moves_and_mixing.md  CONVENTIONS.md  adm-primer.tex  combinatorial-lapse-plan.md  emergent-nonlocality-research-plans.md  ensemble-as-wavefunction-program.md  phased-pachner-moves-plan.md  physics-review-2026-07.md  rk-primer.tex  sampler-dynamics-matter-coupling-plan.md  t3-library-plan.md  tier-c-symbol-glossary.tex  two_term_action_and_emergent_gauge.tex
scripts/: adm_constraint.py  anneal_vdv.py  cocycle_check.py  compare_twins.py  complex_analysis.py  crystal_grains.py  crystal_match.py  curvature_hyperuniformity_g.py  defect_census.py  defect_pairs.py  distance_distribution.py  dopant_pairs.py  dope_hold.py  equilibrium_vdv.py  explore_grid.py  extend_library.py  fk_anneal.py  fk_skeleton.py  flip_analysis.py  generate_seeds.py  grow_seed.py  heat_geodesic.py  hyperuniformity.py  lapse_Nsweep.py  lapse_g_sweep.py  line_tension.py  live_histogram.py  local_lapse.py  overnight_large_queue.sh  produce_grid.py  quench.py  r_isotherm.py  r_pinscan_queue.sh  r_solubility.py  reference_campaign.py  reference_summary.py  replica_aggregate.py  replica_exchange_vdv.py  replica_hold.py  roundness_analysis.py  (+8 more)
source/: algorithms.d  app.d  app_1.d  app_2.d  ddg_capi.d  diameter.py  factoring.d  hashmap.d  linear_extent.py  manifold.d  manifold_algorithms.d  manifold_examples.d  manifold_moves.d  manifold_old.d  manifold_sampler.config  manifold_sampler.d  manifold_small.d  manifold_test.d  moves.d  polygons.d  rational.d  rational_extension_vector.d  rational_number.d  sampler.d  simplex.d  simplicial_complex.d  simplicial_complex_algorithms.d  simplicial_complex_test.d  small_manifold.d  test_runner.d  utility.d
standard_triangulations/: 2d_equilibrated_1000.mfd  2d_equilibrated_200.mfd  2d_equilibrated_2000.mfd  2d_equilibrated_500.mfd  3d_equilibrated_1000.mfd  3d_equilibrated_200.mfd  3d_equilibrated_2000.mfd  3d_equilibrated_500.mfd  4d_equilibrated_200.mfd  4d_equilibrated_500.mfd  600_cell.mfd  T3_A15_m2_N368.mfd  T3_A15_m3_N1242.mfd  dim_3_sphere.mfd  equilibrated_1000.mfd  equilibrated_10000.mfd  equilibrated_100000.mfd  equilibrated_200.mfd  equilibrated_2000.mfd  equilibrated_20000.mfd  equilibrated_500.mfd  equilibrated_5000.mfd  equilibrated_50000.mfd  relax_seed_1000.mfd  relax_seed_10000.mfd  relax_seed_2000.mfd  relax_seed_500.mfd  relax_seed_5000.mfd  vol_only_1000.mfd  vol_only_2000.mfd  vol_only_500.mfd  vol_only_5000.mfd
tests/: explore_importance_weights.py  run_facet_only_test.py  run_importance_test.py  run_naive_test.py  test_crystal_grains.py  test_hyperuniformity.py  test_importance_weight.py  test_manifold.py  test_memory.py  test_sampler.py  test_simplicial_complex.py
(+77 files in other folders)
